@@ -101,6 +101,14 @@
 
 <tr><td>
     <a class="anchor" id="news1"></a>
+    <h6 class="mb-1">Qkera wins 2024 Falling Walls Award </h6> 
+    <div class='font-weight-light'>November 8, 2024</div>
+    <p><small>Qkera was honored as one of the top 25 science start-ups worldwide at the 2024 Falling Walls Science Summit, selected from over 1,100 global contenders. The award was given for its stride to develop innovative solid-state battery electrolytes, achieving higher energy densities and enhanced stability at reduced production costs.</small></p>
+
+</td></tr>
+
+<tr><td>
+    <a class="anchor" id="news2"></a>
     <h6 class="mb-1">Fuzhan Wins ZEISS Women Award 2024 in Digital Research </h6> 
     <div class='font-weight-light'>October 21, 2024</div>
     <p><small>We are thrilled to announce that Fuzhan has been awarded the prestigious ZEISS Women Award 2024 in the Digital Research category. This award recognizes her outstanding contributions to the fields of data science and digitalization of materials science labs, where her innovative research is making a significant impact. Fuzhan's work is pushing the boundaries of digital technology, demonstrating excellence in both academic and practical applications. Her achievements are not only advancing the field but also inspiring future generations of researchers and innovators. The award was presented by Georg v. Erffa, Head of Corporate Human Resources at ZEISS, in a ceremony that celebrated the vision and leadership of female pioneers in Digital & IT.</small></p>
@@ -110,7 +118,7 @@
 </td></tr>
 
 <tr><td>
-    <a class="anchor" id="news2"></a>
+    <a class="anchor" id="news3"></a>
     <h6 class="mb-1">Prof. Rupp Appointed Max Planck Fellow at the Fritz Haber Institute </h6> 
     <div class='font-weight-light'>September 11, 2024</div>
     <p><small>Prof. Rupp has been appointed as a Max Planck Fellow for the next 5 years at the <a href="https://www.fhi.mpg.de" target="_blank">Fritz Haber Institute in Berlin</a>. This honorary title will further strengthen ties with the Max Planck Society, officially making Prof. Rupp a member of the institution.</small></p>
@@ -118,7 +126,7 @@
 </td></tr>
 
 <tr><td>
-    <a class="anchor" id="news3"></a>
+    
     <h6 class="mb-1">Prof. Rupp Elected Vice President of the International Society for Solid State Ionics (ISSI) </h6> 
     <div class='font-weight-light'>August 15, 2024</div>
     <p><small>Prof. Jennifer Rupp has been elected as the 2024-2025 Vice President and the 2026-2027 President of the <a href="http://www.internationalsocietysolidstateionics.org" target="_blank">International Society for Solid State Ionics (ISSI)</a>. This prestigious role underscores her contributions to the field and leadership within the global scientific community. For more information about the ISSI, please visit their website.</small></p>
