@@ -1,3 +1,7 @@
+Qkera wins 2024 Falling Walls Award
+November 8, 2024
+Qkera was honored as one of the top 25 science start-ups worldwide at the 2024 Falling Walls Science Summit, selected from over 1,100 global contenders. The award was given for its stride to develop innovative solid-state battery electrolytes, achieving higher energy densities and enhanced stability at reduced production costs. 
+
 Fuzhan Wins ZEISS Women Award 2024 in Digital Research
 October 21, 2024
 We are thrilled to announce that Fuzhan has been awarded the prestigious ZEISS Women Award 2024 in the Digital Research category. This award recognizes her outstanding contributions to the fields of data science and digitalization of materials science labs, where her innovative research is making a significant impact. Fuzhan's work is pushing the boundaries of digital technology, demonstrating excellence in both academic and practical applications. Her achievements are not only advancing the field but also inspiring future generations of researchers and innovators. The award was presented by Georg v. Erffa, Head of Corporate Human Resources at ZEISS, in a ceremony that celebrated the vision and leadership of female pioneers in Digital & IT. 
